--- a/qualifications.css
+++ b/qualifications.css
@@ -37,6 +37,9 @@ ul li {
   margin-top: 100px;
   border-radius: 125px;
 }
+ol li {
+  padding-top: 5px;
+}
 #info {
   margin-top: 30px;
   margin-bottom: 30px;
