--- a/prices.css
+++ b/prices.css
@@ -1,12 +1,6 @@
 body {
   margin-left: 30px;
 }
-#floattop {
-  width: 100%;
-  float: inherit;
-  position: fixed;
-  top: 0;
-}
 #logo {
   height: 130px;
   padding: 20px;
@@ -36,12 +30,15 @@ ul li {
   font-size: 20px;
   padding: 2.5%;
 }
-#headshot {
+#fees {
   height: 250px;
   display: block;
   margin: auto;
   margin-top: 100px;
-  border-radius: 125px;
+  padding: 30px;
+}
+ol li {
+  padding-top: 5px;
 }
 #info {
   margin-top: 30px;
