--- a/qualifications.css
+++ b/qualifications.css
@@ -30,12 +30,11 @@ ul li {
   font-size: 20px;
   padding: 2.5%;
 }
-#headshot {
-  height: 250px;
+#quals {
+  height: 110px;
   display: block;
   margin: auto;
   margin-top: 100px;
-  border-radius: 125px;
 }
 ol li {
   padding-top: 5px;
@@ -49,7 +48,7 @@ ol li {
   margin: 5px;
   margin-left: 30px;
 }
-#foottext {
+.foottext {
   font-size: 12px;
   text-align: right;
   margin-top: 25px;
